--- a/tex/chapter1.tex
+++ b/tex/chapter1.tex
@@ -39,12 +39,12 @@
 تشخیص فعالیت تصویر محور کاربردهای متنوعی دارد.در نظارت، برنامه های رباتیک،‌ برنامه های تعامل انسان و کامپیوتر، برچسب زدن تصاویر از روی فعل‌ها، جستجو در پایگاه داده با استفاده از فعل‌ها، %
 \gls{FrameTagging}
 ،جستجو در ویدیوها و فهمیدن عملکرد یک شیء و چندین کاربرد متنوع دیگر، مورد استفاده قرار می‌گیرد.
-\cite{UnderstandingActionRecogAll}
+~\cite{UnderstandingActionRecogAll}
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{sample_action_m1}}
-	\caption{چندین نمونه از تصاویر فعالیت انسان
-		\cite{tasvirAvalChapterYek}
+	\caption[چندین نمونه از تصاویر فعالیت انسان]{چندین نمونه از تصاویر فعالیت انسان
+		~\cite{tasvirAvalChapterYek}
 	}
 	\label{fig:humanActionM1}
 \end{figure}
@@ -66,8 +66,8 @@
 \vspace{8pt}
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{kinds_human_acions}}
-	\caption{انواع فعالیت های انسان از آسان به پیچیده (چپ به راست)
-		\cite{HumanActionReviewMogadame}
+	\caption[انواع فعالیت های انسان از آسان به پیچیده]{انواع فعالیت های انسان از آسان به پیچیده (چپ به راست)
+		~\cite{HumanActionReviewMogadame}
 	}ُ
 	\label{fig:kinds_human_acions}
 \end{figure}
@@ -143,7 +143,7 @@
 \vspace{8pt}
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{human_three_amel_mog}}
-	\caption{دو نمونه تصویر از تأثیر سه عامل ژست، اشیاء و موقعیت انسان در درک فعالیت
+	\caption[دو نمونه تصویر از تأثیر سه عامل ژست، اشیاء و موقعیت انسان در درک فعالیت]{دو نمونه تصویر از تأثیر سه عامل ژست، اشیاء و موقعیت انسان در درک فعالیت
 		\cite{tasvirSevomChapterYek}
 	}ُ
 	\label{fig:human_three_amel_mog}
@@ -167,7 +167,7 @@
 یک نمونه از چارچوب شبکه عصبی عمیق برای تشخیص فعالیت انسان است. البته دراینجا ورودی چندین سیگنال از فعالیت‌های مختلف است که به شبکه عصبی عمیق داده شده است. درکاربرد مشابه می‌توان ورودی را یک تصویر نیز درنظر گرفت.
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.7\textwidth]{neural_network_action}}
-	\caption{
+	\caption[مثالی از یک چارچوب شبکه عصبی عمیق برای تشخیص نوع فعالیت]{
 		مثالی از یک چارچوب شبکه عصبی عمیق برای تشخیص نوع فعالیت
 		\cite{WinNT}
 	}
@@ -216,7 +216,7 @@
 	\hfill
 	\subfloat[Attention Self داخل ترنسفرمر]{\includegraphics[width=0.3\textwidth]{self_attention_struc}\label{fig:self_attention_struc}}
 	
-	\caption{ساختار کلی شبکه ترنسفرمر و مکانیزم توجه
+	\caption[ساختار کلی شبکه ترنسفرمر و مکانیزم توجه]{ساختار کلی شبکه ترنسفرمر و مکانیزم توجه
 		\cite{AttentionIsAllNeed}
 	}
 	\label{fig:mainfigure}
