--- a/tex/chapter2.tex
+++ b/tex/chapter2.tex
@@ -128,7 +128,7 @@
  هردو ژست یکسان دارند درحالی که فعالیتی که هرکدام انجام می‌دهند متفاوت است. این ایراد و خطا می‌تواند از طریق توجه به اشیای که دردست دارند کاهش یابد. بنابراین از این ایده استفاده شده تا یک الگوریتم ارتباطی بین ژست و اشیاء مرتبط با انسان را طراحی کنند.\\
  \begin{figure}[ht]
  	\centerline{\includegraphics[width=0.7\textwidth]{similar_pose_diff}}
- 	\caption{دو تصویر ژست‌های یکسان ولی فعالیت‌های متفاوت را نشان می‌دهد
+ 	\caption[دو تصویر ژست‌های یکسان ولی فعالیت‌های متفاوت را نشان می‌دهد]{دو تصویر ژست‌های یکسان ولی فعالیت‌های متفاوت را نشان می‌دهد
  		\cite{Multi_branch_Attention_Recg_still}
  		}
  	\label{fig:similar_pose_diff}
