--- a/tex/chapter3.tex
+++ b/tex/chapter3.tex
@@ -49,7 +49,7 @@
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{normalization_no_norm}}
-	\caption{فرآیند یادگیری شبکه عصبی با داده نرمال شده (راست) و داده نرمال نشده (چپ)
+	\caption[فرآیند یادگیری شبکه عصبی با داده نرمال شده و داده نرمال نشده ]{فرآیند یادگیری شبکه عصبی با داده نرمال شده (راست) و داده نرمال نشده (چپ)
 	 \cite{Normal_not_Normal}
 	}
 	\label{fig:normalization_no_norm}
