--- a/tex/commands.tex
+++ b/tex/commands.tex
@@ -110,7 +110,7 @@ colorlinks,linkcolor=blue,citecolor=blue,final]{hyperref}
 % پکیج درست کردن فهرست مراجع
 \usepackage[nottoc]{tocbibind}
 % فراخوانی بسته زی‌پرشین (باید آخرین بسته باشد)
-\usepackage[extrafootnotefeatures, localise=on, displaymathdigits=persian]{xepersian}
+\usepackage[extrafootnotefeatures, localise=on, displaymathdigits=persian,perpagefootnote=on]{xepersian}
 
 \makeatletter
 % تعریف قلم فارسی و انگلیسی و مکان قلم‌ها
